tests/vertical-slice/accept/vec_record_range_slice.hew
record Point { x: i64, y: i64 }

fn main() {
    let ps: Vec<Point> = Vec::new();
    ps.push(Point { x: 1, y: 2 });
    ps.push(Point { x: 3, y: 4 });
    ps.push(Point { x: 5, y: 6 });
    let tail = ps[1..3];
    println(tail.len());
    println(tail[0].x);
    println(tail[0].y);
    println(tail[1].x);
    println(tail[1].y);
}
